fix(css): estonian translation does not fit

--- a/ajapaik/ajapaik/static/css/ajapaik-style.css
+++ b/ajapaik/ajapaik/static/css/ajapaik-style.css
@@ -2519,6 +2519,8 @@ input[type=search]::-webkit-search-cancel-button {
   div.gmnoprint.gm-style-mtc > div[role=button] {
     padding-left: 7px !important;
     padding-right: 0px !important;
+    font-size: 14px !important;
+    height: 44px;
   }
 }
 
